<resources>
    <string name="app_name">GolfScore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scorecard">ScoreCard</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="log_in">Log in</string>
    <string name="past_scores">Past Scores</string>
    <string name="new_round_score">New Round Score</string>
    <string name="log_out">Log out</string>
    <string name="score">Score</string>
    <string name="par">Par</string>
    <string name="course_name">Course name</string>
    <string name="course">Course Name:</string>
    <string name="tees">Tees</string>
    <string name="tee_color">Tee Color</string>
    <string name="submit">Submit</string>
    <string name="course_length">Course length</string>
    <string name="rounds_played">Rounds played:</string>
    <string name="handicap">Handicap:</string>
    <string-array name="teeColors">
        <item>Black</item>
        <item>Blue</item>
        <item>White</item>
        <item>Red</item>
    </string-array>
</resources>