<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_with_alpha"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/scorecard"
        android:textAlignment="center"
        android:textColor="@color/lightgreen"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#66000000"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#65000000"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="?android:attr/textCursorDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <CheckBox
        android:id="@+id/cbSignIn"
        android:layout_width="204dp"
        android:layout_height="63dp"
        android:button="?android:attr/listChoiceIndicatorMultiple"
        android:buttonTint="@color/black"
        android:text="@string/keep_me_signed_in"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="251dp"
        android:layout_height="60dp"
        android:background="@color/lightgreen"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />


</androidx.constraintlayout.widget.ConstraintLayout>